Agregue el logotipo en la parte superior derecha de todas las pestañas

--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/Pedidos.css">
 </head>
 <body>
-
+    <img src="src/Logo.png" alt="" class="logo">
     <div class="header">
         Acerca de nosotros
     </div>
