--- a/Dudas.html
+++ b/Dudas.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/Dudas.css">
 </head>
 <body>
-
+    <img src="src/Logo.png" alt="" class="logo">
     <div class="header">
         Dudas o sugerencias
     </div>
