--- a/Usuario.html
+++ b/Usuario.html
@@ -5,14 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Usuario</title>
     <link rel="stylesheet" href="css/Usuario.css">
-    <script>
-        function mostrarMensaje() {
-            alert("¡Pedido exitoso!");
-        }
-    </script>
 </head>
 <body>
-
+    <img src="src/Logo.png" alt="" class="logo">
     <div class="productos-container">
         <h1>Ingreso nuevo usuario</h1>
         <form id="Registrar">
