--- a/Venta.html
+++ b/Venta.html
@@ -12,7 +12,7 @@
     </script>
 </head>
 <body>
-
+    <img src="src/Logo.png" alt="" class="logo">
     <div class="productos-container">
         <h1>Venta de Productos</h1>
 
